# uslt-human-eval-app

./: .gitignore  LICENSE  README.md  data.csv  data_full.csv  data_full_supreme.csv  evaluations.csv  exp.py  main.py  main_new.py  main_v2.py  pyproject.toml  results.csv  save_dataset.py  utils.py
data/test/simplified/: access.txt  lsbert.txt  lsbert_cwi.txt  recls.txt  ref1.txt  ref2.txt  uslt_noss.txt
datamodule/: configs.py  loading.py
evalcsv/aykut/: evaluations.csv
evalcsv/full/: evaluations.csv
pages/: Evaluation.py  Instructions.py
